# panda_deburring

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  controller_plugins.xml  package.xml  setup.cfg  setup.py
config/: controller_manager_pytroller_params.yaml  ocp_definition_file.yaml  pytroller_params.yaml  trajectory_pub_params.yaml  trajectory_publisher_params.yaml
include/panda_deburring/: butterworth_filter.hpp  contact_detector.hpp  ft_calibration_filer.hpp  ft_calibration_filter.hpp  visibility.hpp
launch/: bringup.launch.py  test.launch.py  trajectory_pub.launch.py
panda_deburring/: custom_validation.py  deburring_controller.py  force_feedback_ocp_croco_generic.py  force_feedback_opc_croco_generic.py  mpc.py  ocp_croco_force_feedback.py  test_trajectroy_publisher.py  test_trajectroy_publisher_parameters.yaml  trajectory_publisher.py  trajectory_publisher_parameters.yaml  warm_start_shift_previous_solution_force_feedback.py
rviz/: config.rviz
src/: ft_calibration_filer.cpp  ft_calibration_filer_parameters.yaml  ft_calibration_filter.cpp  ft_calibration_filter_parameters.yaml
