<?xml version="1.0"?>
<package format="3">
  <name>panda_deburring</name>
  <version>0.0.1</version>
  <description>Deburring task implementation for Panda robot.</description>
  <maintainer email="krzysztof.wojciechowski@laas.fr">maintainer</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 dependencies. -->
  <build_depend>generate_parameter_library</build_depend>
  <build_depend>generate_parameter_library_py</build_depend>

  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <depend>agimus_pytroller</depend>
  <depend>agimus_demos</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
